Fix for blurry item in FF
reveal.js applies `transform: translate(0, 0)` to the first fragment of a slide (presumably to trigger GPU rendering?), but it's causing the first item on the running-order slide to be blurry in FF; this is a blunt fix.

--- a/local.css
+++ b/local.css
@@ -32,6 +32,10 @@
     padding: 0.25em 0.5em;
     text-align: left;
     transition: all 0s;
+
+    &.fragment:first-child {
+      transform: none;
+    }
   }
 
   h2 + h2 {
